# letta-mobile

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DOLT_REMOTE.md  GRADLE_CACHE_DIAGNOSTICS.md  GRADLE_CONFIGURATION_CACHE_AUDIT.md  GRADLE_CONFIGURATION_CACHE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LETTA_ADMIN_API_REPORT.md  Makefile  README.md  SLICE3_ANALYSIS.md  STOP_WORK_HANDOFF.md  c1n1uaqam0rrnsvqur2pfgghojqqarvf  dlgji0ckvrbltrlqkgarfpurfibc4fo6.darc  fix_cohesion.py  fix_conv.sh  fix_delivery.py  fix_test_file.py  gates.yaml  letta-design-tokens.json  manifest  package.json  plan_step_complete.sh  pr_description.md  qodana.yaml  split_cohesion.py  track_helper3.py
.beads/: .gitignore  config.yaml  export-state.json  issues.jsonl  metadata.json
.claude/: settings.local.json
.githooks/: pre-commit  pre-push
.github/: dependabot.yml  pull_request_template.md
.handson/: chat-gallery-polish-handoff-prompt.md  chat-ux-polish-handoff.md
.jules/: bolt.md
.omo/: handoff.md
.omp/: lsp.json
.serena/: project.yml
.sisyphus/: ralph-loop.local.md
android-compose/: AGENTS.md  README.md  TESTING.md  build.gradle.kts  gradle.properties  local.properties.example  settings.gradle.kts  test_output.txt
android-compose/app/src/main/cpp/: CMakeLists.txt  embedded_curl_bridge.c  embedded_node_cli.cpp  lettacode_node_bridge.cpp
android-compose/native/mermaid_renderer/: Cargo.toml  README.md
android-compose/native/mermaid_renderer/src/: lib.rs
app/: app.tsx
cli/: letta-cli
docs/: DESIGN_SYSTEM.md  PUSH_INGEST_ANALYSIS.md  RELEASE-AUTOMATION.md  (+8 more)
(+2932 files in other folders)
